<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fh_main_relative_layout_padding">

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/pb_padding_top"/>

        <LinearLayout
            android:id="@+id/retry_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:visibility="invisible">

            <TextView
                android:id="@+id/retry_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/retry_tv_text_size"
                android:text="@string/connection_error_message"/>

            <Button
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/retry_message"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/home_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <androidx.legacy.widget.Space
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_height"/>

            <com.example.foodino.customs.GlobalTextView
                android:id="@+id/category_tv"
                style="@style/home_fragment_title_texts"
                android:layout_below="@id/space"
                android:text="@string/category"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_tv"/>

            <com.example.foodino.customs.GlobalTextView
                android:id="@+id/bestTv"
                style="@style/home_fragment_title_texts"
                android:layout_below="@id/category_rv"
                android:layout_marginTop="@dimen/best_tv_margin_top"
                android:text="@string/best"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_rv"
                android:layout_below="@id/bestTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

            </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>