<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_layout_height"
                android:background="@drawable/profile_gradient">

                <LinearLayout
                    android:id="@+id/head_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/head_layout_margin_top"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_img"
                        android:layout_width="@dimen/profile_img_width_height"
                        android:layout_height="@dimen/profile_img_width_height"
                        android:layout_marginTop="@dimen/profile_img_margin_top"
                        android:src="@drawable/default_profile_image"/>

                    <com.example.foodino.customs.GlobalTextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/profile_name_margin_top"
                        android:textSize="@dimen/profile_name_text_size"
                        android:textStyle="bold"
                        android:text="@string/profile_name"/>

                </LinearLayout>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/follow_card_layout"
                android:layout_width="@dimen/follow_card_layout_width"
                android:layout_height="@dimen/follow_card_layout_height"
                android:layout_alignBottom="@id/top_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/follow_card_layout_margin_bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <com.example.foodino.customs.GlobalTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follower"/>

                        <TextView
                            android:id="@+id/follower_count_tv"
                            style="@style/profile_fragment_follow_texts"
                            android:text="@string/default_follower_following_count" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <com.example.foodino.customs.GlobalTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following"/>

                        <TextView
                            android:id="@+id/following_count_tv"
                            style="@style/profile_fragment_follow_texts"
                            android:text="@string/default_follower_following_count" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/menu_information_layout"
                android:layout_width="@dimen/menu_information_layout_width"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/top_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/menu_information_layout_margin_bottom_top"
                android:layout_marginBottom="@dimen/menu_information_layout_margin_bottom_top" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/menu_information_linear_layouts_margin_top"
                    android:paddingRight="@dimen/menu_information_linear_layouts_padding_right"
                    android:layoutDirection="rtl">

                    <ImageView
                        android:layout_width="@dimen/menu_information_icons_width_height"
                        android:layout_height="@dimen/menu_information_icons_width_height"
                        app:srcCompat="@drawable/ic_person_black_24dp"/>

                    <com.example.foodino.customs.GlobalTextView
                        style="@style/profile_fragment_menu_information_texts"
                        android:text="@string/profile_information"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/menu_information_linear_layouts_margin_top"
                    android:paddingRight="@dimen/menu_information_linear_layouts_padding_right"
                    android:layoutDirection="rtl">

                    <ImageView
                        android:layout_width="@dimen/menu_information_icons_width_height"
                        android:layout_height="@dimen/menu_information_icons_width_height"
                        app:srcCompat="@drawable/ic_favorite_border_black_24dp"/>

                    <com.example.foodino.customs.GlobalTextView
                        style="@style/profile_fragment_menu_information_texts"
                        android:text="@string/profile_favorite"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/menu_information_linear_layouts_margin_top"
                    android:paddingRight="@dimen/menu_information_linear_layouts_padding_right"
                    android:layoutDirection="rtl">

                    <ImageView
                        android:layout_width="@dimen/menu_information_icons_width_height"
                        android:layout_height="@dimen/menu_information_icons_width_height"
                        app:srcCompat="@drawable/ic_comment_black_24dp"/>

                    <com.example.foodino.customs.GlobalTextView
                        style="@style/profile_fragment_menu_information_texts"
                        android:text="@string/profile_comments"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/menu_information_linear_layouts_margin_top"
                    android:paddingRight="@dimen/menu_information_linear_layouts_padding_right"
                    android:layoutDirection="rtl">

                    <ImageView
                        android:layout_width="@dimen/menu_information_icons_width_height"
                        android:layout_height="@dimen/menu_information_icons_width_height"
                        android:tint="@color/darkerGray"
                        app:srcCompat="@drawable/logout"/>

                    <com.example.foodino.customs.GlobalTextView
                        style="@style/profile_fragment_menu_information_texts"
                        android:text="@string/profile_logout"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>