<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/rating_linear_layouts_margin_left_right"
        android:layout_marginRight="@dimen/rating_linear_layouts_margin_left_right"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/happyImage"
            android:layout_width="@dimen/rating_icons_width_height"
            android:layout_height="@dimen/rating_icons_width_height"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/rating_icons_margin_bottom"
            app:srcCompat="@drawable/smile"
            android:tint="@color/ratingTintColor"/>

        <TextView
            android:id="@+id/happyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/good" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/rating_linear_layouts_margin_left_right"
        android:layout_marginRight="@dimen/rating_linear_layouts_margin_left_right"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/weirdImage"
            android:layout_width="@dimen/rating_icons_width_height"
            android:layout_height="@dimen/rating_icons_width_height"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/rating_icons_margin_bottom"
            app:srcCompat="@drawable/weird"
            android:tint="@color/ratingTintColor" />

        <TextView
            android:id="@+id/weirdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_comment" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/rating_linear_layouts_margin_left_right"
        android:layout_marginRight="@dimen/rating_linear_layouts_margin_left_right"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/angryImage"
            android:layout_width="@dimen/rating_icons_width_height"
            android:layout_height="@dimen/rating_icons_width_height"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/rating_icons_margin_bottom"
            app:srcCompat="@drawable/angry"
            android:tint="@color/ratingTintColor"/>

        <TextView
            android:id="@+id/angryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sad" />

    </LinearLayout>

</LinearLayout>